# Ghost-Sync

./: .gitignore  LICENSE  README.md  pyproject.toml
ghost_sync/: __init__.py  __main__.py
ghost_sync/clipboard/: platform_darwin.py  platform_win32.py  watcher.py
ghost_sync/common/: config.py  crypto_utils.py  events.py
ghost_sync/identity/: keys.py  trust_store.py
ghost_sync/network/: discovery.py  pair.py  sync.py
tests/: conftest.py  test_clipboard_watcher.py  test_crypto_utils.py  test_discovery.py  test_identity.py  test_trust_store.py
